crates/analyzer/tests/snapshots/errors__call_balance_of_with_wrong_type.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"
---
error: incorrect type for `balance_of` argument at position 0
  ┌─ [snippet]:3:33
  │
3 │   unsafe { std::evm::balance_of(true) }
  │                                 ^^^^ this has type `bool`; expected type `address`


